samples/_failures_safe/1761269747_799d89_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b4dbc4e5.c: In function ‘main’:
./samples/SAFE/__tmp_b4dbc4e5.c:162:28: error: missing terminating " character
  162 |                     printf("Error:
      |                            ^~~~~~~
./samples/SAFE/__tmp_b4dbc4e5.c:162:21: error: expected expression at end of input
  162 |                     printf("Error:
      |                     ^~~~~~
./samples/SAFE/__tmp_b4dbc4e5.c:162:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b4dbc4e5.c:162:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b4dbc4e5.c:162:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b4dbc4e5.c:162:21: error: expected declaration or statement at end of input
